--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "jinja2>=3.1.0",
     "python-multipart>=0.0.6",
-    "python-dotenv>=1.0.0"
+    "python-dotenv>=1.0.0",
+    "ruff>=0.12.4",
 ]
