--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "ruff>=0.12.4",
     "openpyxl>=3.1.0",
+    "pillow>=11.3.0",
+    "pdf2image>=1.17.0",
+    "numpy>=2.3.1",
+    "opencv-python>=4.11.0.86",
 ]
