--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,8 @@ dependencies = [
     "pdf2image>=1.17.0",
     "numpy>=2.3.1",
     "opencv-python>=4.11.0.86",
+    "google-api-python-client>=2.0.0",
+    "google-auth>=2.0.0",
+    "google-auth-oauthlib>=1.0.0",
+    "google-auth-httplib2>=0.2.0",
 ]
