--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,6 @@ dependencies = [
     "google-auth>=2.0.0",
     "google-auth-oauthlib>=1.0.0",
     "google-auth-httplib2>=0.2.0",
+    "itsdangerous>=2.2.0",
+    "sqlalchemy>=2.0.41",
 ]
