--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,24 +38,29 @@ jobs:
           echo "📦 Installing dependencies..."
           uv sync
           
-        #   # Start the application in background
-        #   echo "🚀 Starting application..."
-        #   nohup uv run run.py > app.log 2>&1 &
+          # Stop existing application process
+          echo "🛑 Stopping existing application..."
+          pkill -f "run.py" 2>/dev/null || echo "No existing process found"
+          sleep 2
           
-        #   # Wait a moment for startup
-        #   sleep 5
+          # Start the application in background
+          echo "🚀 Starting application..."
+          nohup uv run run.py > app.log 2>&1 &
           
-        #   # Health check
-        #   echo "🔍 Checking application health..."
-        #   if curl -f http://localhost:8000 > /dev/null 2>&1; then
-        #     echo "✅ Application is running successfully!"
-        #     echo "📊 Process info:"
-        #     ps aux | grep -E "(uv run|python.*run.py)" | grep -v grep || echo "Process not found in ps"
-        #   else
-        #     echo "❌ Application health check failed!"
-        #     echo "📄 Last 20 lines of log:"
-        #     tail -20 app.log || echo "No log file found"
-        #     exit 1
-        #   fi
+          # Wait a moment for startup
+          sleep 5
           
-        #   echo "🎉 Deployment completed successfully!" 
+          # Health check
+          echo "🔍 Checking application health..."
+          if curl -f http://localhost:8000 > /dev/null 2>&1; then
+            echo "✅ Application is running successfully!"
+            echo "📊 Process info:"
+            ps aux | grep -E "(uv run|python.*run.py)" | grep -v grep || echo "Process not found in ps"
+          else
+            echo "❌ Application health check failed!"
+            echo "📄 Last 20 lines of log:"
+            tail -20 app.log || echo "No log file found"
+            exit 1
+          fi
+          
+          echo "🎉 Deployment completed successfully!" 
