--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "purchase-request-site"
 version = "0.1.0"
-description = "Add your description here"
+description = "Purchase request website for McMaster Solar Car members to submit purchase requests and get reimbursements"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = "==3.11.*"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
