--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Lint Check
 
 on:
   push:
@@ -7,34 +7,20 @@ on:
     branches: [ main, master ]
   workflow_dispatch:
 
+
 jobs:
-  lint-and-build:
+  build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        
-    - name: Install uv
-      uses: astral-sh/setup-uv@v3
-      with:
-        version: latest
-    
-    - name: Install ruff
-      run: uv pip install --system ruff
-      
-    - name: Check code formatting
-      run: |
-        echo "🔍 Checking code formatting with ruff..."
-        ruff format --check .
-        
-    - name: Check code linting
-      run: |
-        echo "🔍 Checking code linting with ruff..."
-        ruff check .
-        
+      - uses: actions/checkout@v4
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff
+      # Update output format to enable automatic inline annotations.
+      - name: Run Ruff
+        run: ruff check --output-format=github .
