--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,18 +20,13 @@ jobs:
             cd /home/raj/purchase-request-site
             echo "Starting deployment for commit: ${{ github.sha }}"
             
-            # Force pull latest changes from main branch
             git fetch origin
             git reset --hard origin/main
             
-            # Install/update dependencies
             uv sync
             
-            # Kill existing process if running
             pkill -f "uv run run.py" || true
             
-            # Start the application
-            nohup uv run run.py > nohup.out 2>&1 &
+            nohup setsid uv run run.py > nohup.out 2>&1 &
             
             echo "Deployment completed successfully"
-            echo "Application is running on http://0.0.0.0:8000"
