--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
             
             pkill -f "uv run run.py" || true
             
-            nohup setsid uv run run.py > nohup.out 2>&1 &
+            nohup uv run run.py > nohup.out 2>&1 &
+            
+            sleep 15  # Wait for the process to start
             
             echo "Deployment completed successfully"
