--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "ruff>=0.1.0",
     "supabase>=2.18.1",
+    "pydantic>=2.11.7",
 ]
 
 [tool.ruff]
