add gitleaks to ci.yml, removed custom config from gitleaks command in lefthook.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,8 @@ jobs:
       # Update output format to enable automatic inline annotations.
       - name: Run Ruff
         run: ruff check --output-format=github .
+
+      # Run gitleaks to scan for secrets
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        
