--- a/lefthook.yml
+++ b/lefthook.yml
@@ -16,4 +16,4 @@ pre-commit:
       run: ruff check --fix {staged_files} && ruff format {staged_files}
       stage_fixed: true
     gitleaks:
-      run: gitleaks protect --verbose --redact --staged -c .gitleaks.toml 
+      run: gitleaks protect --verbose --redact --staged 
