--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,12 +29,9 @@ jobs:
         run: ruff check --output-format=github .
 
       # Run Gitleaks to scan for secrets
-      - name: Install Gitleaks
-        run: |
-          wget https://github.com/gitleaks/gitleaks/releases/download/v8.28.0/gitleaks_8.28.0_linux_x64.tar.gz
-          tar -xzf gitleaks_8.28.0_linux_x64.tar.gz
-          sudo mv gitleaks /usr/local/bin/
-
       - name: Run Gitleaks
-        run: gitleaks detect --verbose --source .
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITLEAKS_TOKEN: ${{ secrets.GITLEAKS_TOKEN }}
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
         
