--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,17 @@ dependencies = [
     "sqlalchemy>=2.0.44",
     "supabase>=2.22.0",
 ]
+
+[tool.ruff]
+target-version = "py313"
+line-length = 88
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "ARG", "SIM", "TCH", "TID", "Q"]
+ignore = ["E501", "B008", "C901", "ARG001", "ARG002", "SIM210", "SIM105"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
