--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,15 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: blacksmith-4vcpu-ubuntu-2404
+    runs-on: ubuntu-latest
     
     steps:
      - name: Checkout code
        uses: actions/checkout@v4
        
-     - name: Setup Blacksmith Builder
-       uses: useblacksmith/setup-docker-builder@v1
+     - name: Set up Docker Buildx
+       uses: docker/setup-buildx-action@v3
+       
      - name: Build Docker image
        run: |
          docker build -t purchase-request-site:${{ github.sha }} .
