--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic>=2.12.2",
     "sqlalchemy>=2.0.44",
     "supabase>=2.22.0",
+    "slowapi>=0.1.9",
 ]
 
 [tool.ruff]
