--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -59,7 +59,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event.inputs.deploy == 'true')
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event.inputs.deploy == true)
     steps:
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
