--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
 name: Lint Check
-
 on:
   push:
     branches: [main, master]
   pull_request:
     branches: [main, master]
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +12,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags
-
       - name: Install Python
         uses: actions/setup-python@v5
         with:
@@ -26,7 +23,17 @@ jobs:
       # Update output format to enable automatic inline annotations.
       - name: Run Ruff
         run: ruff check --output-format=github .
-
+      # Check YAML formatting
+      - name: Install yamlfmt
+        run: |
+          # Download and install yamlfmt binary
+          curl -L https://github.com/google/yamlfmt/releases/latest/download/yamlfmt_linux_amd64.tar.gz | tar -xz
+          sudo mv yamlfmt /usr/local/bin/
+          chmod +x /usr/local/bin/yamlfmt
+      - name: Check YAML formatting
+        run: |
+          # Check YAML formatting
+          yamlfmt -lint *.yml *.yaml .github/workflows/*.yml
       # Run Gitleaks to scan for secrets
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
