--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,20 @@ jobs:
       # Update output format to enable automatic inline annotations.
       - name: Run Ruff
         run: ruff check --output-format=github .
-      # Check YAML formatting and linting
-      - name: yamllint
-        uses: reviewdog/action-yamllint@v1
+      # Check YAML formatting
+      - name: Setup Go
+        uses: actions/setup-go@v5
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          fail_on_error: true
-      - name: yamlfmt
-        uses: yk-lab/yamlfmt-action@v1
+          go-version: '1.21'
+      - name: Install yamlfmt
+        run: |
+          go install github.com/google/yamlfmt/cmd/yamlfmt@latest
+          echo "$HOME/go/bin" >> $GITHUB_PATH
+      - name: Check YAML formatting
+        run: |
+          yamlfmt -lint -dry-run .
+        # The -lint flag checks for formatting issues and exits with a non-zero code if issues are found.
+        # The -dry-run flag ensures no changes are applied, only reporting issues.
       # Run Gitleaks to scan for secrets
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
