--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,53 @@ services:
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - ERROR_EMAIL_FROM=${ERROR_EMAIL_FROM}
       - ERROR_EMAIL_TO=${ERROR_EMAIL_TO}
+  loki:
+    image: grafana/loki:2.9.0
+    container_name: loki
+    profiles: ["monitoring"]
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - ./monitoring/loki:/etc/loki
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    profiles: ["monitoring"]
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus:/etc/prometheus
+      - prometheus-data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+  tempo:
+    image: grafana/tempo:latest
+    container_name: tempo
+    profiles: ["monitoring"]
+    ports:
+      - "3200:3200"
+    volumes:
+      - ./monitoring/tempo:/etc/tempo
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    profiles: ["monitoring"]
+    depends_on:
+      - loki
+      - prometheus
+      - tempo
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_DEFAULT_THEME=light
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
+
+volumes:
+  prometheus-data:
+  grafana-data:
