--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ dependencies = [
     "sqlalchemy>=2.0.44",
     "supabase>=2.22.0",
     "slowapi>=0.1.9",
+    "prometheus-fastapi-instrumentator>=7.0.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-exporter-otlp>=1.20.0",
+    "opentelemetry-instrumentation-fastapi>=0.38b0"
 ]
 
 [tool.ruff]
