--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "description": "Purchase request website - Tailwind CSS build",
   "scripts": {
-    "build:css": "tailwindcss -i src/input.css -o src/static/css/output.css --minify"
+    "build:css": "./node_modules/.bin/tailwindcss -i src/input.css -o src/static/css/output.css --minify"
   },
   "devDependencies": {
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "@tailwindcss/cli": "^4.0.0"
   }
 }
